tests/intend_failure/with_empty_struct.stderr
error: Derive FromVariants for NotEnum failed. Must be an enum.
 --> tests/intend_failure/with_empty_struct.rs:3:1
  |
3 | struct NotEnum;
  | ^^^^^^
