tests/intend_failure/with_empty_struct.rs
use enum_variant_macros::*;
#[derive(FromVariants)]
struct NotEnum;
fn main() {
}
